WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
304956
Nullptr crash in RemoteLayerTreeDrawingAreaProxy::hideContentUntilPendingUpdate
https://bugs.webkit.org/show_bug.cgi?id=304956
Summary
Nullptr crash in RemoteLayerTreeDrawingAreaProxy::hideContentUntilPendingUpdate
Matt Woodrow
Reported
2026-01-05 14:46:16 PST
rdar://166682277
Attachments
Add attachment
proposed patch, testcase, etc.
Matt Woodrow
Comment 1
2026-01-05 14:49:09 PST
Pull request:
https://github.com/WebKit/WebKit/pull/56104
EWS
Comment 2
2026-01-05 17:44:50 PST
Committed
305135@main
(a786d2e3ab80): <
https://commits.webkit.org/305135@main
> Reviewed commits have been landed. Closing PR #56104 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug