Nullptr crash in RemoteLayerTreeDrawingAreaProxy::hideContentUntilPendingUpdate. https://bugs.webkit.org/show_bug.cgi?id=304956 <rdar://166682277>

Reviewed by Simon Fraser.

m_remoteLayerTreeHost can have been cleared by detachRemoteLayerTreeHost, so we need to check it for null.

* Source/WebKit/UIProcess/RemoteLayerTree/RemoteLayerTreeDrawingAreaProxy.mm:
(WebKit::RemoteLayerTreeDrawingAreaProxy::hideContentUntilPendingUpdate):
(WebKit::RemoteLayerTreeDrawingAreaProxy::hideContentUntilAnyUpdate):

Canonical link: https://commits.webkit.org/305135@main